# multithreadTestStructure

./: CMakeLists.txt  main.cpp
include/: baseClass.h  client.h  packet.h  recipient.h  server.h  trafficmonitor.h
src/: CMakeLists.txt  client.cpp  recipient.cpp  server.cpp  trafficmonitor.cpp
